--- a/final.html
+++ b/final.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>learning first time</h1>
+    <p>its hard. its hard.its hard.its hard.its hard.its hard.</p>
     
 </body>
 </html>
